@@ -1,3 +1,9 @@
+Changes between 1.2.1 and XXX
+=====================================
+
+- added links to the new capturelog and coverage plugins 
+
+
 Changes between 1.2.1 and 1.2.0
 =====================================
 
